New function hasRole and getCurrentUser